# seamless-signature

./: .gitignore  README.md  plan-return-arrays.md  plan.md  pyproject.toml
seamless_signature/: __init__.py  c_header.py  dtype.py  loader.py  schema.py
tests/: test_c_header.py  test_schema.py
tests/fixtures/: dynamic_return.h  dynamic_return.yaml  outputs.h  outputs.yaml  simple.h  simple.yaml  static_return.h  static_return.yaml  structured.h  structured.yaml  wildcard.h  wildcard.yaml
